--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header class="masthead">
         <div class="container">
              <div class="masthead-heading text-uppercase">Welcome To My Portfolio</div>
-            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">View More</a>
+            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">View More</a>
         </div>
     </header>
     <!-- About -->
@@ -216,7 +216,7 @@
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/scholarship/index.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/index.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Scholarship</div>
@@ -230,7 +230,7 @@
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/spm/indexlaporan.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/indexlaporan.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Satuan Penjamin Mutu (SPM)</div>
@@ -244,7 +244,7 @@
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/matlab/hasil.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/hasil.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Tugas Akhir</div>
@@ -341,12 +341,12 @@
                       <div class="modal-body">
                         <!-- Project Details Go Here-->
                         <div class="col-md-12 col-lg-12">
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/login.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/indextobasa.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/destinasi.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/transportasi.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/kuliner.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/souvenir.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/login.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/indextobasa.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/destinasi.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/transportasi.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/kuliner.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/souvenir.png" alt="" />
                         </div>
                     </div>
                     <p>The web application is used to rent a car and view tourist and culinary locations around the Toba Samosir area and in the web application you can also purchase souvenirs.</p>
@@ -377,12 +377,12 @@
                       <div class="modal-body">
                         <!-- Project Details Go Here-->
                         <div class="col-md-12 col-lg-12">
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/scholarship/index.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/scholarship/createscholarship.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/scholarship/createdonatur.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/scholarship/detail.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/scholarship/request.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/scholarship/uploadberkas.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/index.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/createscholarship.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/createdonatur.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/detail.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/request.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/uploadberkas.png" alt="" />
                         </div>
                     </div>
                     <p>The web application is used for scholarship management where students can request existing scholarships. The web application can also upload files and there is a data export feature to Ms.Excel.</p>
@@ -413,12 +413,12 @@
                       <div class="modal-body">
                         <!-- Project Details Go Here-->
                         <div class="col-md-12 col-lg-12">
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/spm/indexlaporan.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/spm/createlaporan.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/spm/detaillaporan.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/spm/revisi.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/spm/dafrevisi.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/spm/audit.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/indexlaporan.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/createlaporan.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/detaillaporan.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/revisi.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/dafrevisi.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/audit.png" alt="" />
                         </div>
                     </div>
                     <p></p>
@@ -449,8 +449,8 @@
                       <div class="modal-body">
                         <!-- Project Details Go Here-->
                         <div class="col-md-12 col-lg-12">
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/matlab/ui.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/portfolio/matlab/hasil.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/matlab/ui.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/matlab/hasil.png" alt="" />
                          
                         </div>
                     </div>
