--- a/index.html
+++ b/index.html
@@ -341,12 +341,12 @@
                       <div class="modal-body">
                         <!-- Project Details Go Here-->
                         <div class="col-md-12 col-lg-12">
-                            <img class="img-fluid col-md-5" src="assets/img/login.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/login.PNG" alt="" />
                             <img class="img-fluid col-md-5" src="assets/img/indextobasa.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/destinasi.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/transportasi.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/kuliner.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/souvenir.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/destinasi.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/transportasi.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/kuliner.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/souvenir.PNG" alt="" />
                         </div>
                     </div>
                     <p>The web application is used to rent a car and view tourist and culinary locations around the Toba Samosir area and in the web application you can also purchase souvenirs.</p>
@@ -377,12 +377,12 @@
                       <div class="modal-body">
                         <!-- Project Details Go Here-->
                         <div class="col-md-12 col-lg-12">
-                            <img class="img-fluid col-md-5" src="assets/img/index.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/createscholarship.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/createdonatur.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/detail.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/request.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/uploadberkas.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/index.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/createscholarship.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/createdonatur.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/detail.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/request.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/uploadberkas.PNG" alt="" />
                         </div>
                     </div>
                     <p>The web application is used for scholarship management where students can request existing scholarships. The web application can also upload files and there is a data export feature to Ms.Excel.</p>
@@ -413,12 +413,12 @@
                       <div class="modal-body">
                         <!-- Project Details Go Here-->
                         <div class="col-md-12 col-lg-12">
-                            <img class="img-fluid col-md-5" src="assets/img/indexlaporan.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/createlaporan.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/detaillaporan.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/revisi.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/dafrevisi.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/audit.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/indexlaporan.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/createlaporan.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/detaillaporan.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/revisi.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/dafrevisi.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/audit.PNG" alt="" />
                         </div>
                     </div>
                     <p></p>
@@ -449,8 +449,8 @@
                       <div class="modal-body">
                         <!-- Project Details Go Here-->
                         <div class="col-md-12 col-lg-12">
-                            <img class="img-fluid col-md-5" src="assets/img/matlab/ui.png" alt="" />
-                            <img class="img-fluid col-md-5" src="assets/img/matlab/hasil.png" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/matlab/ui.PNG" alt="" />
+                            <img class="img-fluid col-md-5" src="assets/img/matlab/hasil.PNG" alt="" />
                          
                         </div>
                     </div>
